# sistemas-ciber-fisicos-II

./: .gitignore  .gitmodules  README.md
angular_position_control/include/: control_parameters.h  pins.h
angular_position_control/src/: main.cpp
catkin_ws/src/: smb_common
cloud/: pyproject.toml
computer_vision/01/: derivative_main.m  fnc_filter.m
computer_vision/image_correspondance/: pyproject.toml
computer_vision/image_correspondance/image_correspondance/: __main__.py  harris.py  homography_estimation.py
computer_vision/least_squared_errors/: README.md  pyproject.toml
computer_vision/least_squared_errors/least_squared_errors/: __main__.py  least_squared_errors.py
computer_vision/transformations/: pyproject.toml
computer_vision/transformations/transformations/: __main__.py  transformations.py
control_graph/: pyproject.toml
control_graph/control_graph/: main.py
control_graph/data/: 01.txt  butterfield.txt
machine_learning/01/: P1-Prueba.ipynb  P2-Sensores.ipynb
machine_learning/01/datos/: datos_p1.npy
manufactura_inteligente/01/: basic_calculator.vi  basic_calculator_project.lvlps  basic_calculator_project.lvproj
manufactura_inteligente/01/builds/basic_calculator_project/A01274570_Calculator/: a01274570_calculator.ini
smart_manufacturing/01/: a01274570_calculator.vi  calculator.vi  calculator_project.lvproj
smart_manufacturing/02/: Cube.SLDPRT  Cube_max_deviation.STL  Cube_min_deviation.STL  Nes controller.SLDPRT  nes_controller_min.STL  resolution_stl.m
