[tool.poetry]
name = "least-squared-errors"
version = "0.1.0"
description = ""
authors = ["oswaldohernandez <oswaldohernandez@protonmail.com>"]
readme = "README.md"
packages = [{include = "least_squared_errors"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
